# sensor-fuse-cpp

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: pr-check.yml
examples/: demo.cpp
include/Eigen/: Dense
include/gtest/: gtest.h
include/sensor_fuse/: buffer.hpp  imu_service.hpp  kalman.hpp
src/: buffer.cpp  imu_service.cpp  kalman.cpp
tests/: README.md  test_buffer.cpp  test_integration.cpp  test_kalman.cpp
